@@ -1,3 +1,8 @@
+2011-01-28  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/maemo/new.py:
+	  Fix setting start date when adding a task.
+
 2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/maemo/things.py:
